--- a/public/global.css
+++ b/public/global.css
@@ -6,14 +6,15 @@
 }
 
 body {
-  background: url(orion.jpg);
+  background: url(bricks.jpg);
   background-size: 100vw;
   background-color: black;
+  backdrop-filter: blur(5px);
   margin: 0;
 }
 
 :root {
-  --light: #202020;
+  --light: #303030;
   --shade: #151515;
   --highlight: #22222280;
   --lowlight: #1d1d1d80;
