--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
+
 * {
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   color: var(--text);
@@ -6,7 +7,7 @@
 }
 
 body {
-  background: url(bg.jpg) ;
+  background: url(bg.jpg);
   background-size: auto;
   background-color: black;
   /* backdrop-filter: blur(5px); */
@@ -29,13 +30,19 @@ body {
 }
 
 .pane, button {
-  text-shadow: 4px 4px 3px #00000080;
-  backdrop-filter: blur(10px) drop-shadow(5px 5px 5px black);
   box-shadow: -5px -5px 10px var(--light), 4px 4px 5px var(--shade);
   border-bottom: 2px var(--shade) solid;
   border-right: 2px var(--shade) solid;
   border-top: none;
   border-left: none;
+  background-color: #00000080;
+}
+
+.fancyMode .pane, .fancyMode button {
+  text-shadow: 4px 4px 3px #00000080;
+  -webkit-backdrop-filter: blur(10px) drop-shadow(5px 5px 5px black);
+  backdrop-filter: blur(10px) drop-shadow(5px 5px 5px black);
+  background-color: #00000000;
 }
 
 th.pane, td.pane {
@@ -54,7 +61,7 @@ button {
   /* border: 1px solid var(--light); */
   background-color: var(--trans);
   border-radius: 5px;
-  padding: 3px;
+  padding: 5px;
   cursor: pointer;
   transition: .3s;
 }
@@ -67,21 +74,36 @@ button:hover {
   width: 10px;
   height: 10px;
 }
+
 .thin-scroller::-webkit-scrollbar {
   width: 5px !important;
   height: 5px !important;
 }
+
 ::-webkit-scrollbar-track {
   background-color: var(--shade);
   border-radius: 5px;
 }
+
 ::-webkit-scrollbar-thumb {
   background-color: var(--highlight);
   border-radius: 5px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--light);
 }
+
 ::-webkit-scrollbar-corner {
   background: none;
+}
+
+/* Button colors */
+
+button.green {
+  background-color: #00451050;
+}
+
+button.red {
+  background-color: #45000050;
 }
